compiler/testData/compileKotlinAgainstCustomBinaries/suspensionPointInMonitor/output.txt
compiler/testData/compileKotlinAgainstCustomBinaries/suspensionPointInMonitor/source.kt:6:13: error: a suspension point at SourceKt$test$1.invokeSuspend(source.kt:8) is inside a critical section
    builder {
            ^
compiler/testData/compileKotlinAgainstCustomBinaries/suspensionPointInMonitor/source.kt:12:13: error: a suspension point at SourceKt$test$2.invokeSuspend(source.kt:15) is inside a critical section
    builder {
            ^
compiler/testData/compileKotlinAgainstCustomBinaries/suspensionPointInMonitor/source.kt:47:1: error: a suspension point at SourceKt$test$3$invokeSuspend$$inlined$withCrossinline$2.invokeSuspend(source.kt:58) is inside a critical section
inline fun withCrossinline(crossinline a: suspend () -> Unit): suspend () -> Unit {
^
compiler/testData/compileKotlinAgainstCustomBinaries/suspensionPointInMonitor/source.kt:48:34: error: a suspension point at SourceKt$withCrossinline$c$1.invokeSuspend(source.kt:50) is inside a critical section
    val c : suspend () -> Unit = {
                                 ^
COMPILATION_ERROR
